turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:14: error: illegal start of simple expression
var rule:Array[Array[Array[Int]]] = [[[1,8,0],[1,0,0],[0,0,0],[0,0,1]]]
                                    ^